# esptrail

./: CMakeLists.txt  Config.ini  README.md  Setup_esp32.py  vcpkg.cmake
Headers/: Aliases.h  _Handle_ESP32_.hpp  socket_server.c  u_tools.h
sketch_esp32/: sketch_esp32.ino
